refactor/move api key to config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,11 @@
 # default: text-davinci-003
 model: "text-davinci-003"
 
+# api key
+# generate by creating account on openai platform
+# https://openai.com/api/
+api_key: "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"
+
 # Define max words count in single name
 # default: 2
 max_words_count: 2
